# SSAT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ssat.qrc
modules/app/: BoundingBox.cpp  BoundingBox.h  boundingbox.cpp  boundingbox.h  dialogannotation.cpp  dialogannotation.h  dialogannotation.ui  dialogboundingbox.cpp  dialogboundingbox.h  dialogboundingbox.ui  dialogframebased.cpp  dialogframebased.h  dialogframebased.ui  dialogsetup.cpp  dialogsetup.h  dialogsetup.ui  draggablerectitem.cpp  draggablerectitem.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qboundingbox.cpp  qboundingbox.h  qboundingboxrectangle.cpp  qboundingboxrectangle.h  qboundingboxscene.cpp  qboundingboxscene.h  qdraggablerectitem.cpp  qdraggablerectitem.h  qframebasedtablemodel.cpp  qframebasedtablemodel.h  qmultimapmodel.cpp  qmultimapmodel.h  qpoweroftwospinbox.cpp  qpoweroftwospinbox.h  qtreemodelcompleter.cpp  qtreemodelcompleter.h  qvideomanager.cpp  (+13 more)
modules/core/: attribute.cpp  attribute.h  boundingbox.cpp  boundingbox.h  core.cpp  core.h  data.cpp  data.h  frame.cpp  frame.h  framebaseddata.cpp  framebaseddata.h  settings.cpp  settings.h  threadpool.h  util.cpp  util.h
modules/tracker/: cmt.cpp  cmt.h  cmthread.cpp  cmthread.h  cmthread.h_  common.cpp  common.h  consensus.cpp  consensus.h  fastcluster.cpp  fastcluster.h  fusion.cpp  fusion.h  gui.cpp  gui.h  main.cpp  main.cpp_  matcher.cpp  matcher.h  tracker.cpp  tracker.h
res/: ssat.icns
temp/: attempt_01.cpp  attempt_02.cpp
